--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -392,19 +392,14 @@
 
         // Internal function for click/touch logic, called by both onClick and onTouchEnd
         function onClickInternal() {
-            // Only allow clicks if controls are enabled (i.e., not in the middle of a camera animation)
-            if (!controls.enabled) return;
+            // Only allow clicks if controls are enabled (i.e., not in the middle of a camera animation or panel is open)
+            if (!controls.enabled) return; // This correctly prevents clicks on the 3D scene when controls are disabled
 
-            // Update the picking ray with the camera and mouse/touch position
             raycaster.setFromCamera(mouse, camera);
-
-            // Calculate objects intersecting the picking ray
             const intersects = raycaster.intersectObjects(scene.children);
 
             if (intersects.length > 0) {
-                // Find the first intersected object that is a node (has userData.id)
                 const clickedNode = intersects.find(obj => obj.object.userData && obj.object.userData.id);
-
                 if (clickedNode) {
                     zoomToNode(clickedNode.object.userData.id);
                 }
@@ -421,20 +416,40 @@
 
         // Function to handle touch end event for 'clicking' on mobile
         function onTouchEnd(event) {
-            // Prevent scrolling or other default touch behaviors
-            event.preventDefault();
+            // Check if the touch originated on an element within the info panel
+            const infoPanel = document.getElementById('info-panel');
+            let isTouchOnPanel = false;
+            let targetElement = event.target;
+            while (targetElement) {
+                if (targetElement === infoPanel) {
+                    isTouchOnPanel = true;
+                    break;
+                }
+                targetElement = targetElement.parentNode;
+            }
 
-            // Only consider the first touch for a 'click'
-            if (event.changedTouches.length > 0) {
-                const touch = event.changedTouches[0];
-
-                // Calculate touch position in normalized device coordinates (-1 to +1)
-                mouse.x = (touch.clientX / window.innerWidth) * 2 - 1;
-                mouse.y = -(touch.clientY / window.innerHeight) * 2 + 1;
-
-                onClickInternal(); // Call the shared internal logic
+            // If touch is on the panel, prevent default actions on the BODY/WINDOW
+            // to allow panel's own click handlers to fire.
+            // If touch is NOT on the panel, it means it's on the canvas, so preventDefault
+            // to stop scrolling/zooming of the 3D scene.
+            if (isTouchOnPanel) {
+                // For touches on the panel, we allow normal button interaction.
+                // It's generally best to avoid blanket preventDefault here.
+                // Buttons' own event listeners will handle e.g., e.preventDefault() if needed.
+            } else {
+                // If touch is outside the panel (on the canvas), prevent default behavior
+                event.preventDefault();
+                event.stopPropagation(); // Also stop propagation to be safe
+                // And then process the 3D scene click
+                if (event.changedTouches.length > 0) {
+                    const touch = event.changedTouches[0];
+                    mouse.x = (touch.clientX / window.innerWidth) * 2 - 1;
+                    mouse.y = -(touch.clientY / window.innerHeight) * 2 + 1;
+                    onClickInternal();
+                }
             }
         }
+
 
         // Function to animate camera to a target position and look at a target point
         function animateCamera(targetPosition, targetLookAt, duration = 1) {
@@ -452,7 +467,11 @@
                     controls.update();
                 },
                 onComplete: function() {
-                    controls.enabled = true; // Re-enable controls after animation
+                    // Only re-enable controls if the info panel is NOT currently visible
+                    const infoPanel = document.getElementById('info-panel');
+                    if (infoPanel.style.display !== 'block') {
+                        controls.enabled = true;
+                    }
                     controls.target.copy(targetLookAt); // Ensure target is exactly set
                     controls.update();
                 }
@@ -523,10 +542,16 @@
             const navButtonsContainer = document.getElementById('nav-buttons');
             navButtonsContainer.innerHTML = ''; // Clear previous buttons
 
+            // Home Button
             const homeButton = document.createElement('button');
             homeButton.className = 'nav-button home';
             homeButton.innerText = 'Zoom Out to Home';
-            homeButton.onclick = zoomToHome;
+            homeButton.addEventListener('click', zoomToHome); // For desktop clicks
+            homeButton.addEventListener('touchend', (e) => { // For mobile taps
+                e.preventDefault(); // Stop default touch behavior (e.g., scrolling)
+                e.stopPropagation(); // Stop event from bubbling up to canvas/window
+                zoomToHome();
+            }, { passive: false }); // crucial for preventDefault on touch events
             navButtonsContainer.appendChild(homeButton);
 
             if (nodeData.feedsInto && nodeData.feedsInto.length > 0) {
@@ -538,30 +563,48 @@
                     const connectedButton = document.createElement('button');
                     connectedButton.className = 'nav-button';
                     connectedButton.innerText = `Go to ${connection.label}`;
-                    connectedButton.onclick = () => zoomToNode(connection.id);
+                    connectedButton.addEventListener('click', () => zoomToNode(connection.id)); // For desktop clicks
+                    connectedButton.addEventListener('touchend', (e) => { // For mobile taps
+                        e.preventDefault(); // Stop default touch behavior
+                        e.stopPropagation(); // Stop event from bubbling up
+                        zoomToNode(connection.id);
+                    }, { passive: false }); // crucial for preventDefault on touch events
                     navButtonsContainer.appendChild(connectedButton);
                 });
             }
 
             infoPanel.style.display = 'block'; // Show the info panel
-            controls.enabled = false; // Disable controls when panel is open
+            // *** IMPORTANT FIX: Completely dispose OrbitControls listeners ***
+            // This removes OrbitControls' internal listeners from the canvas, allowing panel interaction.
+            if (controls) { // Check if controls exist before disposing
+                controls.dispose();
+            }
+            controls.enabled = false; // Keep this for logical control state
         }
 
         // Function to hide the info panel
         function hideInfoPanel() {
-            document.getElementById('info-panel').style.display = 'none';
-            controls.enabled = true; // Re-enable controls when panel is closed
+            const infoPanel = document.getElementById('info-panel');
+            infoPanel.style.display = 'none';
+            // *** IMPORTANT FIX: Reconnect OrbitControls listeners ***
+            // This re-attaches OrbitControls' listeners to the canvas, re-enabling 3D interaction.
+            if (controls) { // Check if controls exist before connecting
+                controls.connect(renderer.domElement);
+            }
+            controls.enabled = true; // Re-enable controls
         }
 
         // Animation loop
         function animate() {
             requestAnimationFrame(animate);
 
-            // Update controls
-            controls.update();
+            // Update controls (only if they are enabled)
+            if (controls && controls.enabled) { // Only update if controls are enabled
+                controls.update();
+            }
 
             // Raycasting for hover effect (only if controls are enabled)
-            if (controls.enabled) {
+            if (controls && controls.enabled) {
                 raycaster.setFromCamera(mouse, camera);
                 const intersects = raycaster.intersectObjects(scene.children);
 
