--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 
             // Set up the "Start Experience" button
             const zoomOutButton = document.getElementById('zoomOutButton');
-            zoomOutButton.innerText = 'Circular Regenerative Systems of Spirit Well Ranch'; // Change button text
+            zoomOutButton.innerText = 'Click Here to start the Spirit Well Ranch Circular Systems'; // Change button text
             zoomOutButton.style.display = 'block'; // Ensure it's visible initially
 
             zoomOutButton.addEventListener('click', () => {
